feat: Harden security across auth, CORS, headers, and input validation
- Add password strength validation (PasswordValidator) for registration and password change
- Restrict CORS to configurable allowed origins instead of wildcard (kiwi.security.cors.allowed-origins)
- Add security headers: HSTS, X-Content-Type-Options, Referrer-Policy, X-Frame-Options DENY
- Reduce token lifetimes (access: 30d→7d, refresh: 90d→30d)
- Validate YouTube URLs to prevent command injection in yt-dlp calls
- Validate DFS paths to prevent SSRF and path traversal in audio streaming
- Add timing-safe delays on username/email availability checks
- Validate image uploads (type whitelist, size limit, extension matching)
- Move OAuth token from query string to URL fragment for safer redirect
- Upgrade Jasypt encryption from PBEWithMD5AndDES to PBEWITHHMACSHA512ANDAES_256
- Restrict actuator endpoints to /actuator/health only
- Disable Swagger/OpenAPI in production profile
- Remove public access for YouTube sync trigger endpoint
- Simplify docker-compose to infrastructure-only with required env vars
- Restructure AI language learning prompts for consistency across all profiles